force-app/main/default/objects/Activity/fields/Hiring_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Tasks</label>
    <type>Checkbox</type>
</CustomField>