force-app/main/default/objects/Activity/fields/On_Boarding_Task__c.field-meta.xml
<CustomField>
    <fullName>On_Boarding_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defines that the task is an on boarding task</description>
    <label>On Boarding Task</label>
    <type>Checkbox</type>
</CustomField>