force-app/main/default/objects/Activity/fields/Onboarding_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Flow_Name__c</fullName>
    <label>Onboarding Flow Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New_Hire_Task_Update_Contact_Information</fullName>
            </value>
            <value>
                <fullName>New_Hire_Task_Upload_I_9_Form</fullName>
            </value>
            <value>
                <fullName>New_Hire_Task_Upload_Form_OF306</fullName>
            </value>
            <value>
                <fullName>Onboarding_Manager_Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>