force-app/main/default/objects/Activity/fields/Onboarding_Link_Label__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Link_Label__c</fullName>
    <defaultValue>&quot;Visit Link&quot;</defaultValue>
    <inlineHelpText>Provide a button label if Onboarding Task Type = Link</inlineHelpText>
    <label>Onboarding Link Label</label>
    <length>155</length>
    <type>Text</type>
</CustomField>