force-app/main/default/objects/Activity/fields/Onboarding_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Link_URL__c</fullName>
    <defaultValue>&quot;https://trailhead.salesforce.com/home&quot;</defaultValue>
    <inlineHelpText>Provide a URL if Onboarding Task Type = Link</inlineHelpText>
    <label>Onboarding Link URL</label>
    <type>Url</type>
</CustomField>