force-app/main/default/objects/Activity/fields/Recruiting_Task__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recruiting Task</label>
    <type>Checkbox</type>
</CustomField>