force-app/main/default/objects/Activity/fields/Suitability_Task__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitability Task</label>
    <type>Checkbox</type>
</CustomField>